Fix for IE8 compatibility mode truncate text

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -303,3 +303,9 @@ body.menu-colors-sidebar-right {
 .menu-colors #content-sidebar-wrapper {
   position: relative;
 }
+
+.menu-colors #content-sidebar-wrapper {
+  position: absolute;
+  top: 16px;
+  left: 30px;
+}
